force-app/main/default/objects/Volunteer_Job__c/fields/Attributed_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Attributed_Volunteer_Hours__c</fullName>
    <label>Attributed Volunteer Hours</label>
    <summarizedField>Volunteer_Shift__c.Total_Vol_Hours_for_Shift__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>