force-app/main/default/objects/Volunteer_Job__c/fields/Cumulative_Volunteers_Needed__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Volunteers_Needed__c</fullName>
    <label>Cumulative Volunteers Needed</label>
    <summarizedField>Volunteer_Shift__c.of_Volunteers_Still_Needed__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>