force-app/main/default/objects/Volunteer_Job__c/fields/Location_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Location_State_Province__c</fullName>
    <label>Location State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>