force-app/main/default/objects/Volunteer_Job__c/fields/Recommended_Wardrobe__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Wardrobe__c</fullName>
    <label>Recommended Wardrobe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>