force-app/main/default/objects/Volunteer_Job__c/fields/Volunteer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Activity</label>
    <referenceTo>Volunteer_Activity__c</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>