force-app/main/default/objects/Volunteer_Job__c/fields/Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skills__c</fullName>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Skills_Values</valueSetName>
    </valueSet>
</CustomField>